<resources>
    <string name="app_name">ToDo</string>
    <string name="settings">Settings</string>
    <string name="notes">Notes</string>
    <string name="task_list">Task List</string>
    <string name="new_task">New Task</string>
    <string name="title_hint">Title</string>
    <string name="description">Description</string>
    <string name="hello_blank_fragment">Fragment Description</string>
    <string name="new_list_name">New List Name</string>
    <string name="list_name">List Name</string>
    <string name="create_new_list">Create New List</string>
    <string name="task_list_fragment">Task List Fragment</string>
    <string name="delete_item">Do you really want to delete this item?</string>
    <string name="delete_alert">Delete</string>
    <string name="delete_btn">Delete</string>
    <string name="btn_edit_library" translatable="false">Edit library</string>
    <string name="cancel_btn">Cancel</string>
    <string name="update_list">Update The name </string>
    <string name="new_item">New Item</string>
    <string name="tv_empty">Empty</string>
    <string name="edit_list_item">Edit item</string>
    <string name="update_item_info">Update</string>
    <string name="name_item">Name</string>
    <string name="item_info">Item info</string>
    <string name="general">General</string>
    <string name="choose_note_style">Choose note style</string>
    <string name="choose_time_format">Choose time format</string>
    <string name="remove_ads">Remove ads</string>
    <string name="remove_all_ads_summary">Remove all ads from this app</string>
    <string name="theme_settings">Theme settings</string>
    <string name="choose_theme">Choose theme</string>
    <string name="note_text_settings">Note text settings</string>
    <string name="title_text_size">Title text</string>
    <string name="content_text_size">Content size</string>
    <string name="inter_ad_id" translatable="false">ca-app-pub-3940256099942544/1033173712 </string>
</resources>