<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom"
        android:orderInCategory="4"
    />
    <item
        android:id="@+id/notes"
        android:title="@string/notes"
        android:icon="@drawable/ic_notes"
        app:showAsAction="ifRoom"
        android:orderInCategory="3"
        />
    <item
        android:id="@+id/task_list"
        android:title="@string/task_list"
        android:icon="@drawable/ic_list"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"
        />
    <item
        android:id="@+id/new_task"
        android:title="@string/new_task"
        android:icon="@drawable/ic_new_task"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"
        />
</menu>